Updating project 2 instructions

--- a/projects.html
+++ b/projects.html
@@ -230,9 +230,8 @@
                 to help at least three other teams.
               </li>
               <li>
-                <strong>Final Deliverable:</strong>Whole Team: Revise your team Basecamp post under Project 2
-                to add links to each member's individual fork of the group GitHub repository. Individual forks should include README.md files with
-                following:
+                <strong>Final Deliverable:</strong>You will receive a list on your Basecamp post of required fixes from the professor. 
+                Fix your code and edit your original Basecamp post with the words "FINAL TURN IN">.
               </li>
             </ol>
           </section>
